Update design projets tab

--- a/_posts/2023-09-12-pibic.md
+++ b/_posts/2023-09-12-pibic.md
@@ -3,17 +3,9 @@ title: "True Quantum Random Number Generator"
 categories: [Projects]
 tag: [pibic]
 author: pedro
+start_date: "2023-09-01"
+end_date: "2024-09-01"
 ---
-
-<style>
-.image-caption {
-        text-align: center;
-        font-size: 0.9em; /* Deixa o texto da legenda menor */
-        color: #555; /* Cor cinza para diferenciar da descrição principal */
-        margin-top: 0.5em; /* Espaçamento entre a imagem e a legenda */
-    }
-</style>
-
 
 This project explores the development of a **True Quantum Random Number Generator**, leveraging the inherent randomness of radioactive decay to produce truly random numbers. Unlike pseudo-random number generators, which depend on deterministic algorithms, this approach relies on quantum phenomena to achieve genuine unpredictability.
 
@@ -23,6 +15,15 @@ By combining principles of quantum mechanics with advanced computational techniq
 
 
 ![Pedro e Prof. Rogerio Toniolo]({{ "/assets/img/foto_pibic.jpeg" | relative_url }}){: width="300px" }
+
+<style>
+.image-caption {
+        text-align: center;
+        font-size: 0.9em; /* Deixa o texto da legenda menor */
+        color: #555; /* Cor cinza para diferenciar da descrição principal */
+        margin-top: 0.5em; /* Espaçamento entre a imagem e a legenda */
+    }
+</style>
 
 <div class="image-caption">
   Day of the presentation of the project at SEMIC
