--- a/_posts/2024-08-17-liga-ia.md
+++ b/_posts/2024-08-17-liga-ia.md
@@ -3,7 +3,13 @@ title: "Liga de IA"
 categories: [Projects]
 tag: ["liga de ia"]
 author: pedro
+start_date: "2024-09-09"
+end_date:
 ---
+
+The **Liga de IA** is an academic league dedicated to artificial intelligence. Our main activities include conducting research, developing innovative projects, and participating in Kaggle competitions. The league brings together students and researchers to explore AI concepts and apply them to real-world problems, providing a collaborative environment for growth and learning in the field of AI.
+
+![Membros da Liga de IA]({{ "/assets/img/foto_liga.jpeg" | relative_url }}){: width="300px" }
 
 <style>
 
@@ -15,10 +21,6 @@ author: pedro
     }
 
 </style>
-
-The **Liga de IA** is an academic league dedicated to artificial intelligence. Our main activities include conducting research, developing innovative projects, and participating in Kaggle competitions. The league brings together students and researchers to explore AI concepts and apply them to real-world problems, providing a collaborative environment for growth and learning in the field of AI.
-
-![Membros da Liga de IA]({{ "/assets/img/foto_liga.jpeg" | relative_url }}){: width="300px" }
 
 <div class="image-caption">
   I'm the person on the bottom left corner.
