Remove style tag

--- a/_posts/2023-09-12-pibic.md
+++ b/_posts/2023-09-12-pibic.md
@@ -14,17 +14,4 @@ The research includes analyzing the statistical properties of the generated numb
 By combining principles of quantum mechanics with advanced computational techniques, this project aims to contribute to the advancement of secure and reliable systems in various domains.
 
 
-![Pedro e Prof. Rogerio Toniolo]({{ "/assets/img/foto_pibic.jpeg" | relative_url }}){: width="300px" }
-
-<style>
-.image-caption {
-        text-align: center;
-        font-size: 0.9em; /* Deixa o texto da legenda menor */
-        color: #555; /* Cor cinza para diferenciar da descrição principal */
-        margin-top: 0.5em; /* Espaçamento entre a imagem e a legenda */
-    }
-</style>
-
-<div class="image-caption">
-  Day of the presentation of the project at SEMIC
-</div>
+![Pedro e Prof. Rogerio Toniolo]({{ "/assets/img/foto_pibic.jpeg" | relative_url }}){: width="300px" } _Day of the presentation of the project at SEMIC_
