--- a/_posts/2024-08-17-liga-ia.md
+++ b/_posts/2024-08-17-liga-ia.md
@@ -9,19 +9,4 @@ end_date:
 
 The **Liga de IA** is an academic league dedicated to artificial intelligence. Our main activities include conducting research, developing innovative projects, and participating in Kaggle competitions. The league brings together students and researchers to explore AI concepts and apply them to real-world problems, providing a collaborative environment for growth and learning in the field of AI.
 
-![Membros da Liga de IA]({{ "/assets/img/foto_liga.jpeg" | relative_url }}){: width="300px" }
-
-<style>
-
-.image-caption {
-        text-align: center;
-        font-size: 0.9em; /* Deixa o texto da legenda menor */
-        color: #555; /* Cor cinza para diferenciar da descrição principal */
-        margin-top: 0.5em; /* Espaçamento entre a imagem e a legenda */
-    }
-
-</style>
-
-<div class="image-caption">
-  I'm the person on the bottom left corner.
-</div>
+![Membros da Liga de IA]({{ "/assets/img/foto_liga.jpeg" | relative_url }}){: width="300px" }_I'm the person on the bottom left corner_
