--- a/_posts/2024-11-13-TCC.md
+++ b/_posts/2024-11-13-TCC.md
@@ -3,6 +3,7 @@ title:  "Analysis of the impact of Dissimilarity Space within the Concept Drift 
 authors: [pedro, gabriel]
 categories: [Articles, "Concept Drift"]
 tag: ["ia", "machine learning", "data science"]
+year: 2024
 ---
 
 This post shares insights and download for my undergraduate thesis (TCC). My work focused on **concept drift**, where we explored the use of dissimilarity-based classifiers to tackle challenges in dynamically changing data environments. We implemented various approaches for selecting the reference set \(R\), which is crucial for constructing effective dissimilarity spaces.
