--- a/_projects/2023-09-12-pibic.md
+++ b/_projects/2023-09-12-pibic.md
@@ -5,6 +5,7 @@ tag: [pibic]
 author: pedro
 start_date: "2023-09-01"
 end_date: "2024-09-01"
+layout: post
 ---
 
 This project explores the development of a **True Quantum Random Number Generator**, leveraging the inherent randomness of radioactive decay to produce truly random numbers. Unlike pseudo-random number generators, which depend on deterministic algorithms, this approach relies on quantum phenomena to achieve genuine unpredictability.
